[metadata]
name = precompose
description =  Import a Docker Compose application into ostree
long_description = file: README.md
long_description_content_type = text/markdown
author = Jordan Webb
author_email = jordan@getseam.com
url = https://github.com/hello-seam/precompose
keywords = linux, docker, docker-compose, containers, ostree
license = AGPL-3.0-or-later
license_files = LICENSE.md
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
  Programming Language :: Python
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Operating System :: POSIX :: Linux
project_urls =
  Bug Tracker = https://github.com/hello-seam/precompose/issues
  Source Code = https://github.com/hello-seam/precompose

[options]
packages = precompose
python_requires = >= 3.6
install_requires =
  ruamel.yaml
setup_requires = setuptools_scm

[options.entry_points]
console_scripts =
  precompose = precompose.main:main

[flake8]
max-line-length = 88
extend-ignore = E203, W503
